<resources>
    <string name="app_name">Fundamentals</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="permissions">Permissions</string>
    <string name="permission">Permissions!</string>
    <string name="dialog_1">Dialog 1</string>
    <string name="dialog_2">Dialog 2</string>
    <string name="dialog_3">Dialog 3</string>
    <string name="title">Title</string>
    <string name="fragment">Fragment</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragmnet">Second Fragmnet</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="person">Person</string>
    <string name="bottom_nav">Bottom Nav</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="users_fragment">Users Fragment</string>
    <string name="view_pager">View Pager</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="favourite">Favourite</string>
    <string name="add_contact">Add contact</string>
    <string name="settings">Settings</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="activity">Activity</string>
</resources>