<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/addcontact"
        android:icon="@drawable/ic_add_person"
        android:title="@string/add_contact"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_settings"
        android:title="@string/feedback"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/rateus"
        android:title="@string/rate_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/viewpager"
        android:title="@string/view_pager"
        app:showAsAction="never" />

</menu>