<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.MainActivity">

    <TextView
        android:id="@+id/txtperm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/permissions"
        android:textSize="20sp" />

    <Button
        android:id="@+id/permissionbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtperm"
        android:layout_centerHorizontal="true"
        android:text="@string/permission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/d1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/permissionbutton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dialog_1" />

    <Button
        android:id="@+id/bottomnav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/permissionbutton"
        android:layout_alignStart="@id/d1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/bottom_nav" />

    <Button
        android:id="@+id/d2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/d1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dialog_2" />

    <Button
        android:id="@+id/fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/d3"
        android:layout_below="@id/d1"
        android:layout_alignStart="@id/d2"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/fragment" />

    <Button
        android:id="@+id/d3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/d2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/dialog_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myrecycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/d3"
        android:layout_margin="10dp" />

</RelativeLayout>